--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "next": "15.5.3",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.0.18",
+    "clsx": "^2.0.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "typescript": "^5",
