--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
