--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/papaparse": "^5.5.0",
     "clsx": "^2.0.0",
     "libphonenumber-js": "^1.12.29",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "papaparse": "^5.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.14",
@@ -32,7 +32,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^15.5.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
